--- a/xiangni.html
+++ b/xiangni.html
@@ -11,7 +11,7 @@
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play 小熊很想你.</tw-noscript></noscript></tw-story>
 <tw-storydata name="小熊很想你" startnode="1" creator="Twine" creator-version="2.9.2" format="Harlowe" format-version="3.3.9" ifid="28F067F2-D08B-4971-9CBF-0AC1D79529D9" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="好吧" tags="" position="700,0" size="100,100">你捡到了一只(text-colour:cyan)[小熊]，它只是这样看着你....
 
-&lt;img src=&quot;https://t.tutu.to/img/qz6Wz&quot;&gt;
+&lt;img src=&quot;https://img.picui.cn/free/2024/10/02/66fd18be1d18c.jpg&quot;&gt;
 
 
 [继续]&lt;continue|
@@ -117,7 +117,7 @@
 请继续保持......
 
 熊重复地：
-&lt;img src=&quot;https://t.tutu.to/img/qz6Wz&quot;&gt;
+&lt;img src=&quot;https://img.picui.cn/free/2024/10/02/66fd18be1d18c.jpg&quot;&gt;
 因为想听你的声音
 想和你说说话
 泰迪熊的棉絮售罄不补货了，空空的
