--- a/xiangni.html
+++ b/xiangni.html
@@ -57,7 +57,7 @@
 
 请爱着自己，因为我爱你
 所以
-&lt;img src=&quot;https://t.tutu.to/img/qzViM&quot;width=&quot;300px&quot; width=&quot;290px&quot;&gt;
+&lt;img src=&quot;https://img.picui.cn/free/2024/10/02/66fd18be1d18c.jpg&quot;width=&quot;300px&quot; width=&quot;290px&quot;&gt;
 
 如果可以的话，我们还能有话说吗？
 
@@ -71,7 +71,7 @@
 
 [[其实你愿意]]</tw-passagedata><tw-passagedata pid="7" name="真的不愿意" tags="" position="400,600" size="100,100">察觉到你的不高兴，熊拍了拍你的裤脚，先一步告辞了。
 
-&lt;img src=&quot;https://t.tutu.to/img/qzglS&quot;width=&quot;300px&quot; width=&quot;290px&quot;&gt;
+&lt;img src=&quot;https://img.picui.cn/free/2024/10/02/66fd318a2836c.jpg&quot;width=&quot;300px&quot; width=&quot;290px&quot;&gt;
 
 
 好奇怪，走了两步，熊突然变成了半支即将燃烧殆尽的蜡烛，你还愿意多看看它吗？
