--- a/xiangni55.html
+++ b/xiangni55.html
@@ -80,7 +80,7 @@
 [[你愿意离开是假的]]</tw-passagedata><tw-passagedata pid="9" name="你愿意离开是假的" tags="" position="450,1150" size="100,100">[[愿意离开是假的]]
 </tw-passagedata><tw-passagedata pid="10" name="愿意离开是假的" tags="" position="300,1000" size="100,100">[[你愿意离开是假的]]
 你还愿意给我一个拥抱对吗？
-[[愿意]]   [[愿意]]    [[愿意]] </tw-passagedata><tw-passagedata pid="11" name="一个没有制作后续的选项，由你选择走向" tags="" position="100,800" size="100,100">&lt;img src=&quot;https://www.helloimg.com/i/2024/10/02/66fd397156dde.jpg&quot;width=&quot;300px&quot; width=&quot;290px&quot;&gt;
+[[愿意]]   [[愿意]]    [[愿意]] </tw-passagedata><tw-passagedata pid="11" name="一个没有制作后续的选项，由你选择走向" tags="" position="100,800" size="100,100">&lt;img src=&quot;https://danta270.github.io/-/xiangni55.html&quot;width=&quot;300px&quot; width=&quot;290px&quot;&gt;
 我也只是一个，无论怎样选择都可以</tw-passagedata><tw-passagedata pid="12" name="不愿意" tags="" position="475,775" size="100,100">半支蜡烛燃烧的速度很快。
 它燃尽了。
 
